--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.app-width {width:100%}
+li {margin-right: 10px; color: white;}
+
+html, body, #root, #root>div {
+  height: 100%
+}
